tests/dockerfile/graph_builder/checks/resources/EnvPythonHttpsVerify/fail/Dockerfile.run.shell
FROM alpine:3.15

RUN ABC=123 echo test; PYTHONHTTPSVERIFY=0 python example.py ;DEF=456 echo lol;
RUN ABC=123 echo test;PYTHONHTTPSVERIFY=0 python example.py;DEF=456 echo lol;
RUN ABC=123 echo test ;PYTHONHTTPSVERIFY=0 python example.py; DEF=456 echo lol;

RUN ABC=123 echo test&& PYTHONHTTPSVERIFY=0 python example.py &&DEF=456 echo lol;
RUN ABC=123 echo test&&PYTHONHTTPSVERIFY=0 python example.py&&DEF=456 echo lol;
RUN ABC=123 echo test &&PYTHONHTTPSVERIFY=0 python example.py&& DEF=456 echo lol;

RUN ABC=123 echo test|| PYTHONHTTPSVERIFY=0 python example.py ||DEF=456 echo lol;
RUN ABC=123 echo test||PYTHONHTTPSVERIFY=0 python example.py||DEF=456 echo lol;
RUN ABC=123 echo test ||PYTHONHTTPSVERIFY=0 python example.py|| DEF=456 echo lol;

RUN ABC=123 echo test| PYTHONHTTPSVERIFY=0 python example.py |DEF=456 echo lol;
RUN ABC=123 echo test|PYTHONHTTPSVERIFY=0 python example.py|DEF=456 echo lol;
RUN ABC=123 echo test |PYTHONHTTPSVERIFY=0 python example.py| DEF=456 echo lol;

RUN ABC=123      echo test;       PYTHONHTTPSVERIFY=0         python example.py ;     DEF=456          echo lol;
RUN ABC=123      echo test ;       PYTHONHTTPSVERIFY=0         python example.py;     DEF=456          echo lol;
